Calculator.css
body {
  background-color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  transform: scale(4.3);
}
.container{
  display: flex;
  gap: 10px;
}
.group1,
.group2,
.group3,
.group4{
  display: flex;
  flex-direction: column;
  gap: 2px;
}
.equal{
  margin-top: 2px;
}
.equal button{
  padding-left: 58px;
  padding-right: 58px;
  text-align: center;
}
button:hover{
  color: purple;
}
.display{
  border-style: solid;
  border-color: grey;
  border-radius: 2px;
  width: 125px;
  height: 25px;
  margin-bottom: 2px;
  color: white;
  overflow: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}
html{
  overflow: hidden;
}
.backspace{
  margin-bottom: 2px;
}
.backspace{
  padding-left: 28px;
  padding-right: 28px;
  text-align: center;
}

